<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:orientation="vertical"
    android:weightSum="2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context="com.example.aurel.carnet_de_voyage.HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:layout_width="@dimen/home_icon"
            android:layout_height="@dimen/home_icon"
            android:src="@mipmap/home_icon"
            android:contentDescription="@string/home_icon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_button1"
            android:background="@drawable/home_button"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:paddingLeft="@dimen/small_padding"
            android:paddingRight="@dimen/small_padding"
            android:onClick="manageTrip"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_button2"
            android:background="@drawable/home_button"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_marginTop="@dimen/medium_margin"
            android:paddingLeft="@dimen/small_padding"
            android:paddingRight="@dimen/small_padding"
            android:onClick="allTrip"/>
    </LinearLayout>
</LinearLayout>
