<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_card"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.example.aurel.carnet_de_voyage.ModifyCardActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_formulaire"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/card_picture"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_picture_height"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:onClick="openPicture"/>
                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_picture"
                    android:hint="@string/edit_commentaire"
                    android:layout_margin="@dimen/small_margin"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <Button
            android:id="@+id/valid_add_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/home_button"
            android:text="@string/valider"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:onClick="valideCard"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/layout_camera"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone">
        <FrameLayout
            android:id="@+id/camera_preview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/snapshot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/medium_margin"
                android:src="@mipmap/circle"
                android:background="@android:color/transparent"
                android:onClick="snapshot"/>
            <ImageButton
                android:id="@+id/save_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/snapshot"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/bar_height"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:src="@mipmap/rightarrow"
                android:background="@android:color/transparent"
                android:visibility="gone"
                android:onClick="savePicture"/>
            <ImageButton
                android:id="@+id/delete_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/save_picture"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/bar_height"
                android:src="@mipmap/delete"
                android:background="@android:color/transparent"
                android:visibility="gone"
                android:onClick="deletePicture"/>
        </RelativeLayout>
    </FrameLayout>
</LinearLayout>
